--- a/cc.css
+++ b/cc.css
@@ -20,9 +20,9 @@ body { background: #fff; }
     padding: 2px;
     -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
-    border-radius: 3px;
     background-color: #ffffff;
-    border: 1px solid #000;
+    /*border: 1px solid #000;
+    border-radius: 3px;*/
     width: 200px;
     font-size: 12px;
     width: 64px;
