--- a/cc.css
+++ b/cc.css
@@ -37,7 +37,7 @@ body { background: #fff; }
 #alertMsg{width: 300px;height: 180px}
 #alertMsg .xbtn{float: right;color: #fff;cursor: pointer;padding: 5px 10px;background-color: #E53935;}
 #alertMsg{
-    position: fixed;background-color: #fff;border: 2px solid #03A9F4;border-radius: 10px;padding: 10px;
+    position: fixed;background-color: #fff;border: 3px solid #607D8B;border-radius: 10px;padding: 10px;
 }
 #alertMsg h2{margin: 2px 10px;}
 #alertMsg span{color:#000;}
