--- a/Treant.css
+++ b/Treant.css
@@ -1,6 +1,6 @@
 /* required LIB STYLES */
 /* .Treant se automatski dodaje na svaki chart conatiner */
-.Treant { position: relative;overflow-x: scroll; padding: 0 !important; }
+.Treant { position: relative;overflow-x: auto; padding: 0 !important; }
 .Treant > .node,
 .Treant > .pseudo { position: absolute; display: block; visibility: hidden; }
 .Treant.Treant-loaded .node,
