--- a/cc.css
+++ b/cc.css
@@ -61,4 +61,4 @@ a{text-decoration: none;color: #1565c0;}
     .top{margin: 0;}
 }
 .status_0{background-color: #222;color: #fff;}
-.status_2{border: 1px solid #eee;color: #4CAF50;}
+.status_2{border: 1px solid #8BC34A;color: #fff;background-color: #8BC34A;}
