--- a/Treant.css
+++ b/Treant.css
@@ -6,6 +6,8 @@
 .Treant.Treant-loaded .node,
 .Treant.Treant-loaded .pseudo { visibility: visible; }
 .Treant > .pseudo { width: 0; height: 0; border: none; padding: 0; }
-.Treant .collapse-switch { width: 3px; height: 3px; display: block; border: 1px solid black; position: absolute; top: 1px; right: 1px; cursor: pointer; }
-.Treant .collapsed .collapse-switch { background-color: #868DEE; }
+.Treant .collapse-switch { width: 100%;height: 100%; display: block; border: 0; position: absolute; top: 1px; right: 1px; cursor: pointer; }
+.Treant .collapsed .collapse-switch:after { content: '▼' }
+.Treant .collapse-switch:after { content: '▲' }
+.status_0 .collapse-switch,.status_1 .collapse-switch,.status_2 .collapse-switch,.title .collapse-switch { display: none;}
 .Treant > .node img {	border: none; float: left; }
