--- a/cc.css
+++ b/cc.css
@@ -17,7 +17,6 @@ body { background: #fff; }
 .node-name { font-weight: bold;line-height: 2;}
 
 .node1 {
-    padding: 2px;
     background-color: #ffffff;
     border: 1px solid #9E9E9E;
     border-radius: 3px;
@@ -25,6 +24,7 @@ body { background: #fff; }
     font-size: 12px;
     width: 48px;
 }
+.country{width: 70px}
 .node1 img{
 	width: 48px;
 }
